# poker_ml

./: .gitignore  Makefile  README.md  plan.md  strategy.md
card_recognizer_ml/: Dockerfile  Makefile  main.py
card_recognizer_ml/data/: checkpoint  data.md  gen.sh  model2.tf.index
expected_value/: Cargo.toml
expected_value/data/: input_hand
expected_value/src/: main.rs
hand_predictor_ml/: Makefile  main.py
hand_predictor_ml/data/: predict.csv
hand_ranker/: README.md  ranker.py  scores.py
ocr/: Dockerfile  Makefile  ocr.py
orchestrator/: main.py  readme.md
